<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mae.AdicionarFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewAdicionarMae"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/adicionar"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewNomeMae"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nome" />

            <EditText
                android:id="@+id/editTextNomeMae"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textViewCepMae"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/cep" />

            <EditText
                android:id="@+id/editTextCepMae"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/textViewLogradouroMae"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/logradouro" />

            <EditText
                android:id="@+id/editTextLogradouroMae"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textViewNumeroMae"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/numero" />

            <EditText
                android:id="@+id/editTextNumeroMae"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/textViewBairroMae"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/bairro" />

            <EditText
                android:id="@+id/editTextBairroMae"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textViewCidadeMae"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/cidade" />

            <EditText
                android:id="@+id/editTextCidadeMae"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textViewFixoMae"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/telefone_fixo" />

            <EditText
                android:id="@+id/editTextFixoMae"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />

            <TextView
                android:id="@+id/textViewCelularMae"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/telefone_celular" />

            <EditText
                android:id="@+id/editTextCelularMae"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />

            <TextView
                android:id="@+id/textViewComercialMae"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/telefone_comercial" />

            <EditText
                android:id="@+id/editTextComercialMae"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />

            <TextView
                android:id="@+id/textViewDataNascimentoMae"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/data_nascimento" />

            <EditText
                android:id="@+id/editTextDataNascimentoMae"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date" />

            <Button
                android:id="@+id/buttonAdicionarMae"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/salvar" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>